Added rewards config handler
